--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "nodeman": "^1.1.2"
+    "jsonwebtoken": "^9.0.2",
+    "nodeman": "^1.1.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
